# ocean-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pytest.ini
servers/adcirc-mcp/: README.md  pyproject.toml  server.json  smithery.yaml
servers/adcirc-mcp/src/adcirc_mcp/: __main__.py  client.py  models.py  server.py  utils.py
servers/adcirc-mcp/src/adcirc_mcp/tools/: docs.py  parsing.py  reference.py  validation.py
servers/adcirc-mcp/tests/: conftest.py  test_live.py  test_mcp_protocol.py  test_parsers.py  test_tools.py  test_validation.py
servers/adcirc-mcp/tests/fixtures/: fort13_sample.txt  fort14_header.txt  fort15_errors.txt  fort15_minimal.txt  fort22_sample.txt
servers/coops-mcp/: README.md  pyproject.toml  server.json  smithery.yaml
servers/coops-mcp/eval/: evaluation.xml
servers/coops-mcp/src/coops_mcp/: __init__.py  __main__.py  client.py  models.py  server.py  utils.py
servers/coops-mcp/src/coops_mcp/tools/: currents.py  derived.py  meteorological.py  stations.py  water_levels.py
servers/coops-mcp/tests/: conftest.py  test_client.py  test_live.py  test_mcp_protocol.py  test_models.py  test_tools.py  test_utils.py  test_validation.py
servers/coops-mcp/tests/fixtures/: currents.json  datums.json  extreme_water_levels.json  flood_annual.json  meteorological_wind.json  nearest_stations.json  peak_storm_events.json  sea_level_trends.json  station_metadata.json  tide_predictions.json  water_levels_latest.json
servers/erddap-mcp/: README.md  pyproject.toml  server.json  smithery.yaml
servers/erddap-mcp/eval/: evaluation.xml
servers/erddap-mcp/src/erddap_mcp/: __init__.py  __main__.py  client.py  models.py  registry.py  server.py  utils.py
servers/erddap-mcp/src/erddap_mcp/tools/: griddap.py  metadata.py  search.py  tabledap.py
servers/erddap-mcp/tests/: conftest.py  test_live.py  test_mcp_protocol.py  test_tools.py  test_utils.py  test_validation.py
servers/erddap-mcp/tests/fixtures/: all_datasets.json  dataset_info.json  griddap_data.json  search_results.json  tabledap_data.json
servers/goes-mcp/: README.md  pyproject.toml  server.json  smithery.yaml
servers/goes-mcp/src/goes_mcp/: __init__.py  __main__.py  client.py  models.py  server.py
servers/goes-mcp/src/goes_mcp/tools/: __init__.py  imagery.py  products.py
servers/goes-mcp/tests/: conftest.py  test_live.py  test_mcp_protocol.py  test_tools.py  test_validation.py
servers/goes-mcp/tests/fixtures/: slider_latest_times.json
servers/nhc-mcp/: README.md  pyproject.toml  server.json  smithery.yaml
servers/nhc-mcp/src/nhc_mcp/: __init__.py  client.py  models.py  server.py  utils.py
servers/nhc-mcp/src/nhc_mcp/tools/: __init__.py  active.py  forecast.py  history.py
servers/nhc-mcp/tests/: conftest.py  test_client.py  test_live.py  test_mcp_protocol.py  test_tools.py  test_utils.py  test_validation.py
servers/nhc-mcp/tests/fixtures/: active_storms_with_data.json  best_track.txt  forecast_track.json  forecast_track_empty.json  hurdat2_sample.txt  watches_warnings.json
servers/ofs-mcp/: README.md  pyproject.toml  server.json  smithery.yaml
servers/ofs-mcp/src/ofs_mcp/: __init__.py  __main__.py  client.py  models.py  server.py  utils.py
servers/ofs-mcp/src/ofs_mcp/tools/: __init__.py  discovery.py  forecast.py
servers/ofs-mcp/tests/: __init__.py  conftest.py  test_live.py  test_mcp_protocol.py  test_tools.py  test_utils.py  test_validation.py
servers/ofs-mcp/tests/fixtures/: coops_observations.json  station_metadata.json
servers/recon-mcp/: CLAUDE.md  README.md  pyproject.toml  server.json  smithery.yaml
servers/recon-mcp/src/recon_mcp/: __init__.py  client.py  models.py  server.py  utils.py
servers/recon-mcp/src/recon_mcp/tools/: __init__.py  fixes.py  hdob.py  missions.py  sfmr.py  vdm.py
servers/recon-mcp/tests/: conftest.py  test_client.py  test_live.py  test_mcp_protocol.py  test_sfmr.py  test_tools.py  test_utils.py  test_validation.py
servers/recon-mcp/tests/fixtures/: directory_listing.html  fdeck_sample.txt  hdob_bulletin.txt  sfmr_listing.html  vdm_bulletin.txt
servers/schism-mcp/: README.md  pyproject.toml  server.json  smithery.yaml
servers/schism-mcp/src/schism_mcp/: __main__.py  client.py  models.py  server.py  utils.py
servers/schism-mcp/src/schism_mcp/tools/: docs.py  (+3 more)
servers/schism-mcp/tests/: conftest.py  test_live.py  test_mcp_protocol.py  test_parsers.py  test_tools.py  test_validation.py
servers/schism-mcp/tests/fixtures/: bctides_sample.txt  hgrid_header.txt  param_nml_errors.txt  param_nml_minimal.txt  vgrid_sample.txt
servers/stofs-mcp/: CLAUDE.md  README.md  pyproject.toml  server.json  smithery.yaml
servers/stofs-mcp/eval/: evaluation.xml
servers/stofs-mcp/src/stofs_mcp/: __init__.py  client.py  models.py  server.py  stations.py  utils.py
servers/stofs-mcp/tests/: conftest.py  test_live.py  test_mcp_protocol.py  test_tools.py  test_utils.py  test_validation.py
servers/stofs-mcp/tests/fixtures/: coops_error.json  coops_observations.json
servers/ufs-runner-mcp/: README.md  pyproject.toml  server.json
servers/ufs-runner-mcp/src/ufs_runner_mcp/: __init__.py  __main__.py  models.py  runner.py  server.py
servers/ufs-runner-mcp/tests/: conftest.py  test_runner.py  test_tools.py
servers/usgs-mcp/: README.md  pyproject.toml  server.json  smithery.yaml
servers/usgs-mcp/src/usgs_mcp/: client.py  models.py  server.py
servers/usgs-mcp/tests/: conftest.py  test_live.py  test_mcp_protocol.py  test_tools.py  test_validation.py
servers/usgs-mcp/tests/fixtures/: daily_stats.rdb  dv_response.json  iv_response.json  monthly_stats.rdb  peak_streamflow.rdb  site_info.rdb  site_search.rdb
servers/winds-mcp/: README.md  pyproject.toml  server.json  smithery.yaml
servers/winds-mcp/src/winds_mcp/: client.py  models.py  server.py
servers/winds-mcp/tests/: conftest.py  test_live.py  test_mcp_protocol.py  test_tools.py  test_utils.py  test_validation.py
servers/winds-mcp/tests/fixtures/: iem_history.json  nws_latest_observation.json  nws_nearest_stations.json  nws_observations.json  nws_station_kjfk.json  nws_stations_ny.json
(+107 files in other folders)
