[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coops-mcp"
version = "0.1.0"
description = "MCP server providing access to NOAA CO-OPS tides, water levels, currents, and meteorological data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
coops-mcp = "coops_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coops_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]
