[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goes-mcp"
version = "0.1.0"
description = "NOAA GOES satellite imagery via STAR CDN — visible, infrared, and water vapor images from GOES-18/19"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Mansur Ali Jisan", email = "mansur.jisan@noaa.gov"},
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
goes-mcp = "goes_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/goes_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]
