[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nhc-mcp"
version = "0.1.0"
description = "MCP server for NHC storm tracks, advisories, and hurricane best track data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
nhc-mcp = "nhc_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nhc_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "respx>=0.22.0"]
