[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stofs-mcp"
version = "0.1.0"
description = "MCP server for NOAA STOFS storm surge forecast access and validation against CO-OPS observations"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    {name = "Mansur Ali Jisan", email = "mansur.jisan@noaa.gov"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "noaa",
    "storm-surge",
    "stofs",
    "coastal-flooding",
    "schism",
    "adcirc",
    "oceanography",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "netCDF4>=1.7.0",
    "numpy>=1.26.0",
    "xarray>=2024.1.0",
]

[project.urls]
Homepage = "https://github.com/mansurjisan/ocean-mcp"
Repository = "https://github.com/mansurjisan/ocean-mcp"
"Bug Tracker" = "https://github.com/mansurjisan/ocean-mcp/issues"
Documentation = "https://github.com/mansurjisan/ocean-mcp/tree/main/servers/stofs-mcp"
Changelog = "https://github.com/mansurjisan/ocean-mcp/releases"

[project.scripts]
stofs-mcp = "stofs_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stofs_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]
