[project]
name = "ufs-runner-mcp"
version = "0.1.0"
description = "MCP server for setting up, validating, submitting, and monitoring UFS-Coastal experiments on HPC"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Mansur Ali Jisan", email = "mansur.jisan@noaa.gov"},
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "f90nml>=1.4.0",
    "pyyaml>=6.0",
]

[project.scripts]
ufs-runner-mcp = "ufs_runner_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ufs_runner_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
